--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/fontawesome.min.css">
@@ -55,7 +55,7 @@
         </section>
         <footer>
             <div class="left"><a href="https://github.com/JosefZr" target="_blank">zeraibi youcef </a></div> |
-            <div class="right"><a href="" target="_blank"> sourcecode</a></div>
+            <div class="right"><a href="https://github.com/JosefZr/Library/tree/main" target="_blank"> sourcecode</a></div>
             <i class="fa-brands fa-github fa-2x"></i>
         </footer>
     <script src="main.js"></script>
